# llm_rag_sec_findings

./: .env.example  .gitignore  README.md  design_report.md  ground_truth.txt  pyproject.toml
docs/learning/: 01-llm-fundamentals.md  02-embeddings-vectors.md  03-rag-fundamentals.md  04-vector-databases.md  05-reranking-retrieval.md  06-prompt-engineering.md  07-evaluation-metrics.md  08-advanced-rag.md  09-production.md  10-interview-prep.md  GETTING_STARTED.md  README.md
notebooks/: RAG_SEC_10K.ipynb
outputs/: EVALUATION_SUMMARY.md  evaluation_comparison_report.html  evaluation_comparison_report.json
src/: __init__.py  chunker.py  embeddings.py  llm.py  pdf_parser.py  pipeline.py  reranker.py  vector_store.py
src/test/: create_comparison_report.py  evaluate.py  test_both_functions.py
